   Version 0.49
   Version 0.48
   Version 0.47
   Version 0.46
   Version 0.45
   Version 0.44
   Version 0.43
   Version 0.42
   Version 0.41
   Version 0.40
   Version 0.39
   Version 0.38
   Version 0.37
   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.57
 ============

 Released on 
  
 New features and improvements:

   - Miscellaneous menu: have an option to display the collector content (todo #562).
   - Miscellaneous menu: have an option to display the audit trace (todo #732).
   - myICollector: cleanup the stores at end.
   - OpeTemplateProperties: account tooltip is account label (todo #1105).
   - TVAForm: label is now mandatory.
   - TVAStyle: style the VAT declarations.
   - Review (re-check+setup) all integrity constraints. 
 
 Bug fixes:

   - AccountsChart: fix reordering of children of a renumbered account (todo #1104). 
   - FormulaEngine: fix nested parenthese evaluation.

 Other changes:

   - 
-----------------------------------------------------------------------
 Version 0.56
 ============

 Released on 2016-05-01
  
 New features and improvements:

   - Main notebook's pages are now detachable (todo #668), and re-attachable.
   - ofaDossierOpen: open in read-only mode (todo #701).
   - ofaFormulaEngine: accepts a variable count of arguments.
   - ofaTVARecordProperties: set the auto-eval mode to True.
   - ofsOpe: set again the auto-eval mode to False, only using %EVAL() function.
   - ofoTVARecord: improve data control.
   - ofoTVARecord: distinguish between correspondence and notes.
   - ofoTVARecord: generate entries at validation time. 
   - ofoEntry: new versioned import-export format, including operation number.
 
 Bug fixes:

   - Fix 'Closing period' menu item sensitivity when dossier is read-only.
   - ofaExerciceCloseAssistant: only run user prefs after closing assistant
     (and new properties have been set).