@@ -344,8 +344,6 @@
 1108 2016- 5- 5 OpeTemplateProperties, GuidedInputBin: review width of
                 account column
 
-1109 2016- 5- 5 GuidedInputBin: row number should be italic
-
 1110
 
 -----------------------------------------------------------------------
@@ -1279,6 +1277,9 @@
 1105 2016- 5- 3 FEAT OpeTemplate: if account is set, then tooltip is
                 account label
      2016- 5- 3 done
+
+1109 2016- 5- 5 GuidedInputBin: row number should be italic
+     2016- 5- 5 fixed
 
 -----------------------------------------------------------------------
  P. Wieser - Created on 2014, may 2nd
