@@ -35,6 +35,7 @@
   
  New features and improvements:
 
+   - GuidedInputBin: row number is italic (todo #1109).
    - Miscellaneous menu: have an option to display the collector content (todo #562).
    - Miscellaneous menu: have an option to display the audit trace (todo #732).
    - myICollector: cleanup the stores at end.
